--- a/data/OD/OD_calculator.ipynb
+++ b/data/OD/OD_calculator.ipynb
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c9c4466c",
    "metadata": {},
    "outputs": [
@@ -518,15 +518,16 @@
      "output_type": "stream",
      "text": [
       "Building TOP-20 OD for dashboard (excluding self-loops)...\n",
-      "Removed self-loop OD rows: 28123\n",
+      "Removed self-loop OD rows: 0\n",
       "Dashboard OD rows after TOP-20: 240\n",
-      "Saved dashboard TOP-20 OD (no self-loops) → ./od_dashboard_topk.json\n"
+      "Removed OD rows with missing centroid: 0\n",
+      "Saved dashboard TOP-20 OD with coordinates (no self-loops) → ./od_dashboard_topk.json\n"
      ]
     }
    ],
    "source": [
     "# =========================\n",
-    "# Build DASHBOARD-level TOP-K OD (NO self-loop)\n",
+    "# Build DASHBOARD-level TOP-K OD (WITH COORDINATES)\n",
     "# =========================\n",
     "\n",
     "TOP_K = 20   # 👈 推荐 20；想 10 改成 10\n",
@@ -570,12 +571,51 @@
     ")\n",
     "\n",
     "# -------------------------------------------------\n",
-    "# 4️⃣ 只保留 Dashboard 必需字段\n",
+    "# 4️⃣ 加载 tract centroids（一次）\n",
+    "# -------------------------------------------------\n",
+    "with open(OUT_TRACT_CENTROID_JSON, \"r\", encoding=\"utf-8\") as f:\n",
+    "    tract_centroids = json.load(f)\n",
+    "\n",
+    "# -------------------------------------------------\n",
+    "# 5️⃣ 映射坐标（Dashboard 关键）\n",
+    "# -------------------------------------------------\n",
+    "def get_coord(tract_id, key):\n",
+    "    info = tract_centroids.get(str(tract_id))\n",
+    "    if not info:\n",
+    "        return None\n",
+    "    return info[key]\n",
+    "\n",
+    "topk_df[\"o_lat\"] = topk_df[\"origin_tract\"].apply(\n",
+    "    lambda x: get_coord(x, \"lat\")\n",
+    ")\n",
+    "topk_df[\"o_lon\"] = topk_df[\"origin_tract\"].apply(\n",
+    "    lambda x: get_coord(x, \"lon\")\n",
+    ")\n",
+    "topk_df[\"d_lat\"] = topk_df[\"destination_tract\"].apply(\n",
+    "    lambda x: get_coord(x, \"lat\")\n",
+    ")\n",
+    "topk_df[\"d_lon\"] = topk_df[\"destination_tract\"].apply(\n",
+    "    lambda x: get_coord(x, \"lon\")\n",
+    ")\n",
+    "\n",
+    "# 过滤掉极少数 centroid 缺失的 OD\n",
+    "before_geo = len(topk_df)\n",
+    "topk_df = topk_df.dropna(\n",
+    "    subset=[\"o_lat\", \"o_lon\", \"d_lat\", \"d_lon\"]\n",
+    ")\n",
+    "after_geo = len(topk_df)\n",
+    "\n",
+    "print(f\"Removed OD rows with missing centroid: {before_geo - after_geo}\")\n",
+    "\n",
+    "# -------------------------------------------------\n",
+    "# 6️⃣ 只保留 Dashboard 必需字段（含坐标）\n",
     "# -------------------------------------------------\n",
     "dashboard_cols = [\n",
     "    \"month\",\n",
     "    \"origin_tract\",\n",
     "    \"destination_tract\",\n",
+    "    \"o_lat\", \"o_lon\",\n",
+    "    \"d_lat\", \"d_lon\",\n",
     "    \"travel_mode\",\n",
     "    \"linked_count\",\n",
     "    \"unlinked_count\",\n",
@@ -587,12 +627,12 @@
     "topk_df = topk_df[dashboard_cols]\n",
     "\n",
     "# -------------------------------------------------\n",
-    "# 5️⃣ JSON 安全处理\n",
+    "# 7️⃣ JSON 安全处理\n",
     "# -------------------------------------------------\n",
     "topk_df = topk_df.fillna(0)\n",
     "\n",
     "# -------------------------------------------------\n",
-    "# 6️⃣ 输出 Dashboard JSON\n",
+    "# 8️⃣ 输出 Dashboard JSON\n",
     "# -------------------------------------------------\n",
     "OUT_DASHBOARD_JSON = \"./od_dashboard_topk.json\"\n",
     "\n",
@@ -604,7 +644,7 @@
     "    )\n",
     "\n",
     "print(\n",
-    "    f\"Saved dashboard TOP-{TOP_K} OD \"\n",
+    "    f\"Saved dashboard TOP-{TOP_K} OD with coordinates \"\n",
     "    f\"(no self-loops) → {OUT_DASHBOARD_JSON}\"\n",
     ")\n"
    ]
