--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -11,7 +11,7 @@
     "# import glob\n",
     "\n",
     "# # Define the folder path\n",
-    "# computer_villa = 'C:/Users/RuohanLi/Villanova University/Complete-trip-coordinate - General'\n",
+    "# computer_villa = 'C:/Users/rli04/Villanova University/Complete-trip-coordinate - Documents/General'\n",
     "# file_paths = glob.glob(computer_villa + '/Salt_Lake/delivery/Salt_Lake-Mar-2020/*.snappy.parquet')\n",
     "# df_list = [pd.read_parquet(file, engine='pyarrow') for file in file_paths]\n",
     "# # Load the first file\n",
@@ -19,8 +19,311 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "39a1a94a",
+   "metadata": {},
+   "source": [
+    "workflow\n",
+    "1. raw data\n",
+    "2. linked trip aggregation, sort by local_datetime_start\n",
+    "3. select OD (airport to center city)[cences track level]\n",
+    "4. linked trip filtter (the first trip O in the airport, the last trip D in the center city)\n",
+    "5. attach geomery\n",
+    "6. export csv (select linked trip with multi-modes or other filtter method)\n",
+    "7. export json"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "cf937a00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =========================\n",
+    "# CONFIG\n",
+    "# =========================\n",
+    "BASE_DIR = \"C:/Users/rli04/Villanova University/Complete-trip-coordinate - Documents/General\"\n",
+    "PARQUET_DIR = f\"{BASE_DIR}/Salt_Lake/delivery\"\n",
+    "TRACT_SHP = f\"{BASE_DIR}/Manuscript/Figure/Visualization-RL/2-OD patterns by census track/six_counties_track.shp\"\n",
+    "\n",
+    "# airport -> central city (example)\n",
+    "ORIG_TRACT = \"49035980000\"#49057201900(weber)\n",
+    "DEST_TRACT = \"49035114000\"\n",
+    "\n",
+    "MONTHS = ['Jan']\n",
+    "        #'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
+    "        #  'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
+    "OUTPUT_CSV = \"air2central_complete_trip_samples.csv\"\n",
+    "OUTPUT_JSON = \"samples_air2central.json\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7262213e",
+   "metadata": {},
+   "source": [
+    "#### 1. Load raw parquet (minimal columns)\n",
+    "#### 2. Clean + normalize (time, mode, distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "49cda62c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "import pygeohash as pgh\n",
+    "from shapely.geometry import Point, LineString\n",
+    "from shapely import wkt\n",
+    "import glob\n",
+    "import json\n",
+    "from datetime import datetime\n",
+    "\n",
+    "USE_COLS = [\n",
+    "    \"linked_trip_id\", \"trip_id\", \"tour_id\",\n",
+    "    \"travel_mode\", \"local_datetime_start\", \"local_datetime_end\",\n",
+    "    \"network_distance\", \"route_distance\",\n",
+    "    \"geohash7_orig\", \"geohash7_dest\",\n",
+    "    \"access_stop\", \"access_stop_id\",\n",
+    "    \"egress_stop\", \"egress_stop_id\",\n",
+    "    \"trip_purpose\", \"trip_weight\",\n",
+    "    \"route_taken\"\n",
+    "]\n",
+    "\n",
+    "dfs = []\n",
+    "for m in MONTHS:\n",
+    "    files = glob.glob(f\"{PARQUET_DIR}/Salt_Lake-{m}-2020/*.snappy.parquet\")\n",
+    "    for f in files:\n",
+    "        df = pd.read_parquet(f, columns=USE_COLS)\n",
+    "        dfs.append(df)\n",
+    "\n",
+    "df = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "# basic clean\n",
+    "df[\"local_datetime_start\"] = pd.to_datetime(df[\"local_datetime_start\"], errors=\"coerce\")\n",
+    "df[\"local_datetime_end\"] = pd.to_datetime(df[\"local_datetime_end\"], errors=\"coerce\")\n",
+    "df = df[df[\"local_datetime_end\"] > df[\"local_datetime_start\"]]\n",
+    "\n",
+    "df[\"duration_min\"] = (\n",
+    "    df[\"local_datetime_end\"] - df[\"local_datetime_start\"]\n",
+    ").dt.total_seconds() / 60\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ddbd94b",
+   "metadata": {},
+   "source": [
+    "#### 3. Geohash → census tract (orig / dest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c99013d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracts = gpd.read_file(TRACT_SHP).to_crs(\"EPSG:4326\")\n",
+    "\n",
+    "def gh_to_point(gh):\n",
+    "    lat, lon = pgh.decode(gh)\n",
+    "    return Point(lon, lat)\n",
+    "\n",
+    "gdf_o = gpd.GeoDataFrame(\n",
+    "    df[[\"geohash7_orig\"]],\n",
+    "    geometry=df[\"geohash7_orig\"].apply(gh_to_point),\n",
+    "    crs=\"EPSG:4326\"\n",
+    ")\n",
+    "gdf_d = gpd.GeoDataFrame(\n",
+    "    df[[\"geohash7_dest\"]],\n",
+    "    geometry=df[\"geohash7_dest\"].apply(gh_to_point),\n",
+    "    crs=\"EPSG:4326\"\n",
+    ")\n",
+    "\n",
+    "df[\"GEOID_orig\"] = gpd.sjoin(gdf_o, tracts, how=\"left\", predicate=\"within\")[\"GEOID\"].values\n",
+    "df[\"GEOID_dest\"] = gpd.sjoin(gdf_d, tracts, how=\"left\", predicate=\"within\")[\"GEOID\"].values\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70c3038c",
+   "metadata": {},
+   "source": [
+    "#### 4. Sort by linked_trip_id + time\n",
+    "#### 5. Identify linked trips with:\n",
+    "   - first.orig == airport tract\n",
+    "   - last.dest == central tract\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "93c12ee5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sort_values([\"linked_trip_id\", \"local_datetime_start\"])\n",
+    "\n",
+    "first = df.groupby(\"linked_trip_id\").first()\n",
+    "last = df.groupby(\"linked_trip_id\").last()\n",
+    "\n",
+    "valid_linked = first[\n",
+    "    (first[\"GEOID_orig\"] == ORIG_TRACT) &\n",
+    "    (last[\"GEOID_dest\"] == DEST_TRACT)\n",
+    "].index\n",
+    "\n",
+    "df = df[df[\"linked_trip_id\"].isin(valid_linked)]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d14365f",
+   "metadata": {},
+   "source": [
+    "#### 7. Attach network geometry (mode-aware)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "94377eb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load networks\n",
+    "auto_links = pd.read_csv(f\"{BASE_DIR}/Salt_Lake/supplementInputs/network/auto-biggest-connected-graph/link.csv\")\n",
+    "transit_links = pd.read_csv(f\"{BASE_DIR}/Salt_Lake/supplementInputs/network/UTA/link with flow.csv\")\n",
+    "\n",
+    "auto_dict = {\n",
+    "    (int(r.from_osm_node_id), int(r.to_osm_node_id)): r.geometry\n",
+    "    for r in auto_links.itertuples()\n",
+    "}\n",
+    "transit_dict = {\n",
+    "    (int(r.from_node_id), int(r.to_node_id)): r.geometry\n",
+    "    for r in transit_links.itertuples()\n",
+    "}\n",
+    "\n",
+    "def build_geometry(row):\n",
+    "    nodes = [int(x) for x in str(row.route_taken).split(\",\") if x.strip().isdigit()]\n",
+    "    if len(nodes) < 2:\n",
+    "        return None\n",
+    "\n",
+    "    coords = []\n",
+    "    link_dict = auto_dict if row.travel_mode == \"car\" else transit_dict\n",
+    "\n",
+    "    for a, b in zip(nodes[:-1], nodes[1:]):\n",
+    "        if (a, b) in link_dict:\n",
+    "            try:\n",
+    "                geom = wkt.loads(link_dict[(a, b)])\n",
+    "                coords.extend(list(geom.coords))\n",
+    "            except:\n",
+    "                continue\n",
+    "    return LineString(coords) if len(coords) > 1 else None\n",
+    "\n",
+    "df[\"geometry\"] = df.apply(build_geometry, axis=1)\n",
+    "df = df[df[\"geometry\"].notnull()]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "975b7fc7",
+   "metadata": {},
+   "source": [
+    "#### 8. Aggregate per segment (trip_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c89ce8a3",
+   "metadata": {},
+   "source": [
+    "#### 9. Export:\n",
+    "   - CSV (debug / archive)\n",
+    "   - JSON (dashboard)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "59523236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(OUTPUT_CSV, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c834f3ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = []\n",
+    "\n",
+    "for r in df.itertuples():\n",
+    "    coords = [[lat, lon] for lon, lat in list(r.geometry.coords)]\n",
+    "\n",
+    "    samples.append({\n",
+    "        \"id\": r.trip_id,\n",
+    "        \"mode\": r.travel_mode,\n",
+    "        \"route\": coords,\n",
+    "        \"duration_min\": round(r.duration_min, 1),\n",
+    "        \"network_distance_km\": r.network_distance,\n",
+    "        \"route_distance_km\": r.route_distance,\n",
+    "        \"origin\": {\n",
+    "            \"lon\": pgh.decode(r.geohash7_orig)[1],\n",
+    "            \"lat\": pgh.decode(r.geohash7_orig)[0],\n",
+    "            \"geohash\": r.geohash7_orig\n",
+    "        },\n",
+    "        \"destination\": {\n",
+    "            \"lon\": pgh.decode(r.geohash7_dest)[1],\n",
+    "            \"lat\": pgh.decode(r.geohash7_dest)[0],\n",
+    "            \"geohash\": r.geohash7_dest\n",
+    "        },\n",
+    "        \"access\": {\n",
+    "            \"stop_id\": r.access_stop_id,\n",
+    "            \"stop_name\": r.access_stop\n",
+    "        },\n",
+    "        \"egress\": {\n",
+    "            \"stop_id\": r.egress_stop_id,\n",
+    "            \"stop_name\": r.egress_stop\n",
+    "        },\n",
+    "        \"meta\": {\n",
+    "            \"linked_trip_id\": r.linked_trip_id,\n",
+    "            \"tour_id\": r.tour_id,\n",
+    "            \"purpose\": r.trip_purpose,\n",
+    "            \"weight\": r.trip_weight\n",
+    "        }\n",
+    "    })\n",
+    "\n",
+    "out = {\n",
+    "    \"schema\": \"nova.complete_trip.sample.v1\",\n",
+    "    \"generated_at\": datetime.utcnow().isoformat() + \"Z\",\n",
+    "    \"count\": len(samples),\n",
+    "    \"samples\": samples\n",
+    "}\n",
+    "\n",
+    "with open(OUTPUT_JSON, \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(out, f, indent=2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fa1a831",
+   "metadata": {},
+   "source": [
+    "# old version below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cddd22f3",
    "metadata": {},
    "outputs": [],
@@ -33,7 +336,7 @@
     "from shapely.geometry import Point\n",
     "\n",
     "# Folder path\n",
-    "folder_path = 'C:/Users/RuohanLi/Villanova University/Complete-trip-coordinate - General'\n",
+    "folder_path = 'C:/Users/rli04/Villanova University/Complete-trip-coordinate - Documents/General'\n",
     "\n",
     "# Months\n",
     "months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
@@ -42,7 +345,10 @@
     "# Only load needed columns\n",
     "use_cols = [\n",
     "    'linked_trip_id', 'trip_id', 'travel_mode', 'local_datetime_start', 'local_datetime_end',\n",
-    "    'network_distance', 'geohash7_orig', 'geohash7_dest'\n",
+    "    'network_distance', 'geohash7_orig', 'geohash7_dest', \n",
+    "    'route_taken','route_distance', 'route_speed',\n",
+    "    'access_stop_id','egress_stop_id',\n",
+    "    'trip_purpose'\n",
     "]\n",
     "# Travel modes of interest\n",
     "modes = {'car', 'bus', 'rail', 'walk/bike'}  # use set for faster membership check\n",
@@ -83,13 +389,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b1aada3e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ============ 2. 加载地理边界并筛选Geohash对应关系 ============\n",
-    "tract_path = r\"C:\\Users\\RuohanLi\\Villanova University\\Complete-trip-coordinate - General\\Manuscript\\Figure\\Visualization-RL\\2-OD patterns by census track\\six_counties_track.shp\"\n",
+    "tract_path = r\"C:/Users/rli04/Villanova University/Complete-trip-coordinate - Documents/General/Manuscript/Figure/Visualization-RL/2-OD patterns by census track/six_counties_track.shp\"\n",
     "tracts = gpd.read_file(tract_path).to_crs(\"EPSG:4326\")\n",
     "\n",
     "# Step 1: 构造 orig 和 dest 点\n",
@@ -214,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "82bc0607",
    "metadata": {},
    "outputs": [
@@ -236,7 +542,7 @@
     "import ast\n",
     "\n",
     "# === 设置 ===\n",
-    "folder_path = \"C:/Users/RuohanLi/Villanova University/Complete-trip-coordinate - General\"\n",
+    "folder_path = \"C:/Users/rli04/Villanova University/Complete-trip-coordinate - Documents/General\"\n",
     "target_ids = [\n",
     "    \"KWzJGrJMlbBXGBdYWd51rRYNrlVBRNYJQLwGZylWa4lZeKq0oP0LQE-rVzWQ05jPj2X9LLBQXpAvdqLrg5QX\",  # Jan\n",
     "    \"RLaKOp9YB2WDo44DoYLLKbeKjqzoWAz9J7vM7wEJxEDBwZExB262rO-1B1XElqEwldbAnxYQlwvwAqDx1xJg\",  # Feb\n",
@@ -335,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "fadbe078",
    "metadata": {},
    "outputs": [
@@ -353,7 +659,7 @@
     "import os\n",
     "\n",
     "# 设置路径和 ID\n",
-    "folder_path = \"C:/Users/RuohanLi/Villanova University/Complete-trip-coordinate - General\"\n",
+    "folder_path = \"C:/Users/rli04/Villanova University/Complete-trip-coordinate - Documents/General\"\n",
     "target_ids = [\n",
     "    \"KWzJGrJMlbBXGBdYWd51rRYNrlVBRNYJQLwGZylWa4lZeKq0oP0LQE-rVzWQ05jPj2X9LLBQXpAvdqLrg5QX\",  # Jan\n",
     "    \"RLaKOp9YB2WDo44DoYLLKbeKjqzoWAz9J7vM7wEJxEDBwZExB262rO-1B1XElqEwldbAnxYQlwvwAqDx1xJg\",  # Feb\n",
@@ -396,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
