--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -48,12 +48,12 @@
     "TRACT_SHP = f\"{BASE_DIR}/Manuscript/Figure/Visualization-RL/2-OD patterns by census track/six_counties_track.shp\"\n",
     "\n",
     "# airport -> central city (example)\n",
-    "ORIG_TRACT = \"49035980000\"#49057201900(weber)\n",
+    "ORIG_TRACT = \"49035980000\"#49057201900 (weber) #49035980000 (airport)\n",
     "DEST_TRACT = \"49035114000\"\n",
     "\n",
-    "MONTHS = ['Jan']\n",
-    "        #'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
-    "        #  'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
+    "MONTHS = ['Jan',\n",
+    "          'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
+    "          'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
     "OUTPUT_CSV = \"air2central_complete_trip_samples.csv\"\n",
     "OUTPUT_JSON = \"samples_air2central.json\"\n"
    ]
@@ -69,10 +69,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "49cda62c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Processing month Jan ===\n",
+      "Rows loaded: 2782070\n",
+      "After time filter: 2782070\n",
+      "After linked-trip filter: 47828 | linked trips: 21763\n",
+      "\n",
+      "=== Processing month Feb ===\n",
+      "Rows loaded: 2621929\n",
+      "After time filter: 2621929\n",
+      "After linked-trip filter: 55212 | linked trips: 24469\n",
+      "\n",
+      "=== Processing month Mar ===\n",
+      "Rows loaded: 2359530\n",
+      "After time filter: 2359353\n",
+      "After linked-trip filter: 43408 | linked trips: 19167\n",
+      "\n",
+      "=== Processing month Apr ===\n",
+      "Rows loaded: 2007645\n",
+      "After time filter: 2007645\n",
+      "After linked-trip filter: 30412 | linked trips: 13431\n",
+      "\n",
+      "=== Processing month May ===\n",
+      "Rows loaded: 2864795\n",
+      "After time filter: 2864795\n",
+      "After linked-trip filter: 48050 | linked trips: 21537\n",
+      "\n",
+      "=== Processing month Jun ===\n",
+      "Rows loaded: 2612547\n",
+      "After time filter: 2612547\n",
+      "After linked-trip filter: 43441 | linked trips: 19465\n",
+      "\n",
+      "=== Processing month Jul ===\n",
+      "Rows loaded: 2425743\n",
+      "After time filter: 2425743\n",
+      "After linked-trip filter: 41229 | linked trips: 18433\n",
+      "\n",
+      "=== Processing month Aug ===\n",
+      "Rows loaded: 2255205\n",
+      "After time filter: 2255205\n",
+      "After linked-trip filter: 38924 | linked trips: 17370\n",
+      "\n",
+      "=== Processing month Sep ===\n",
+      "Rows loaded: 2171003\n",
+      "After time filter: 2171003\n",
+      "After linked-trip filter: 36659 | linked trips: 16345\n",
+      "\n",
+      "=== Processing month Oct ===\n",
+      "Rows loaded: 2230334\n",
+      "After time filter: 2230334\n",
+      "After linked-trip filter: 38140 | linked trips: 17017\n",
+      "\n",
+      "=== Processing month Nov ===\n",
+      "Rows loaded: 2068204\n",
+      "After time filter: 2068204\n",
+      "After linked-trip filter: 31511 | linked trips: 14109\n",
+      "\n",
+      "=== Processing month Dec ===\n",
+      "Rows loaded: 2363362\n",
+      "After time filter: 2363362\n",
+      "After linked-trip filter: 33894 | linked trips: 15171\n",
+      "\n",
+      "=== Final dataset ===\n",
+      "Total rows: 488708\n",
+      "Total linked trips: 218277\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
@@ -82,6 +153,8 @@
     "import glob\n",
     "import json\n",
     "from datetime import datetime\n",
+    "\n",
+    "\n",
     "\n",
     "USE_COLS = [\n",
     "    \"linked_trip_id\", \"trip_id\", \"tour_id\",\n",
@@ -94,23 +167,71 @@
     "    \"route_taken\"\n",
     "]\n",
     "\n",
-    "dfs = []\n",
+    "MONTHLY_DFS = []\n",
+    "\n",
     "for m in MONTHS:\n",
+    "    print(f\"\\n=== Processing month {m} ===\")\n",
+    "\n",
     "    files = glob.glob(f\"{PARQUET_DIR}/Salt_Lake-{m}-2020/*.snappy.parquet\")\n",
+    "    if not files:\n",
+    "        continue\n",
+    "\n",
+    "    # ===== 1️⃣ 读当月所有文件 =====\n",
+    "    dfs = []\n",
     "    for f in files:\n",
     "        df = pd.read_parquet(f, columns=USE_COLS)\n",
     "        dfs.append(df)\n",
     "\n",
-    "df = pd.concat(dfs, ignore_index=True)\n",
+    "    df_month = pd.concat(dfs, ignore_index=True)\n",
+    "    print(\"Rows loaded:\", len(df_month))\n",
     "\n",
-    "# basic clean\n",
-    "df[\"local_datetime_start\"] = pd.to_datetime(df[\"local_datetime_start\"], errors=\"coerce\")\n",
-    "df[\"local_datetime_end\"] = pd.to_datetime(df[\"local_datetime_end\"], errors=\"coerce\")\n",
-    "df = df[df[\"local_datetime_end\"] > df[\"local_datetime_start\"]]\n",
+    "    # ===== 2️⃣ basic clean（一次性做）=====\n",
+    "    df_month[\"local_datetime_start\"] = pd.to_datetime(\n",
+    "        df_month[\"local_datetime_start\"], errors=\"coerce\"\n",
+    "    )\n",
+    "    df_month[\"local_datetime_end\"] = pd.to_datetime(\n",
+    "        df_month[\"local_datetime_end\"], errors=\"coerce\"\n",
+    "    )\n",
     "\n",
-    "df[\"duration_min\"] = (\n",
-    "    df[\"local_datetime_end\"] - df[\"local_datetime_start\"]\n",
-    ").dt.total_seconds() / 60\n"
+    "    df_month = df_month[\n",
+    "        df_month[\"local_datetime_end\"] > df_month[\"local_datetime_start\"]\n",
+    "    ]\n",
+    "\n",
+    "    print(\"After time filter:\", len(df_month))\n",
+    "\n",
+    "    # ===== 3️⃣ linked_trip 月内筛选 =====\n",
+    "    mode_sets = (\n",
+    "        df_month\n",
+    "        .groupby(\"linked_trip_id\")[\"travel_mode\"]\n",
+    "        .agg(lambda x: set(x))\n",
+    "    )\n",
+    "\n",
+    "    valid_linked_ids = mode_sets[\n",
+    "        (mode_sets.apply(len) >= 2) &\n",
+    "        (mode_sets != {\"car\"})\n",
+    "    ].index\n",
+    "\n",
+    "    df_month = df_month[\n",
+    "        df_month[\"linked_trip_id\"].isin(valid_linked_ids)\n",
+    "    ]\n",
+    "\n",
+    "    print(\n",
+    "        \"After linked-trip filter:\",\n",
+    "        len(df_month),\n",
+    "        \"| linked trips:\",\n",
+    "        df_month[\"linked_trip_id\"].nunique()\n",
+    "    )\n",
+    "    df_month[\"duration_min\"] = ( df_month[\"local_datetime_end\"] - df_month[\"local_datetime_start\"] ).dt.total_seconds() / 60\n",
+    "    # ===== 4️⃣ append 月结果 =====\n",
+    "    MONTHLY_DFS.append(df_month)\n",
+    "\n",
+    "# ===== 5️⃣ 全年 concat（此时数据已很小）=====\n",
+    "df = pd.concat(MONTHLY_DFS, ignore_index=True)\n",
+    "\n",
+    "print(\"\\n=== Final dataset ===\")\n",
+    "print(\"Total rows:\", len(df))\n",
+    "print(\"Total linked trips:\", df[\"linked_trip_id\"].nunique())\n",
+    "\n"
    ]
   },
   {
@@ -123,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "c99013d5",
    "metadata": {},
    "outputs": [],
@@ -162,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "93c12ee5",
    "metadata": {},
    "outputs": [],
@@ -190,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "94377eb6",
    "metadata": {},
    "outputs": [],
@@ -257,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "59523236",
    "metadata": {},
    "outputs": [],
@@ -266,61 +387,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4e741444",
-   "metadata": {},
-   "source": [
-    "#### select sampls"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "34fe87e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def normalize_mode(m):\n",
-    "    if not isinstance(m, str):\n",
-    "        return None\n",
-    "    m = m.lower().strip()\n",
-    "    if m == [\"car\"]:\n",
-    "        return \"car\"\n",
-    "    if m == \"bus\":\n",
-    "        return \"bus\"\n",
-    "    if m == [\"rail\"]:\n",
-    "        return \"rail\"\n",
-    "    if m == \"walk/bike\":\n",
-    "        return \"walk/bike\"\n",
-    "    return None\n",
-    "\n",
-    "df[\"mode_norm\"] = df[\"travel_mode\"].apply(normalize_mode)\n",
-    "\n",
-    "def is_valid_linked_trip(group):\n",
-    "    modes = set(group[\"mode_norm\"].dropna())\n",
-    "\n",
-    "    # 条件 1：至少两种 mode\n",
-    "    if len(modes) < 2:\n",
-    "        return False\n",
-    "\n",
-    "    # 条件 2：不能只有 car\n",
-    "    if modes == {\"car\"}:\n",
-    "        return False\n",
-    "\n",
-    "    return True\n",
-    "valid_linked_ids = (\n",
-    "    df.groupby(\"linked_trip_id\")\n",
-    "      .filter(is_valid_linked_trip)[\"linked_trip_id\"]\n",
-    "      .unique()\n",
-    ")\n",
-    "\n",
-    "df = df[df[\"linked_trip_id\"].isin(valid_linked_ids)]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "e2e6593d",
    "metadata": {},
    "outputs": [],
@@ -364,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "c834f3ab",
    "metadata": {},
    "outputs": [],
@@ -422,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "24ca2fa1",
    "metadata": {},
    "outputs": [],
