--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -48,14 +48,14 @@
     "TRACT_SHP = f\"{BASE_DIR}/Manuscript/Figure/Visualization-RL/2-OD patterns by census track/six_counties_track.shp\"\n",
     "\n",
     "# airport -> central city (example)\n",
-    "ORIG_TRACT = \"49035980000\"#49057201900 (weber) #49035980000 (airport)\n",
+    "ORIG_TRACT = \"49057201900\"#49057201900 (weber) #49035980000 (airport)\n",
     "DEST_TRACT = \"49035114000\"\n",
     "\n",
     "MONTHS = ['Jan',\n",
     "          'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
     "          'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
-    "OUTPUT_CSV = \"air2central_complete_trip_samples.csv\"\n",
-    "OUTPUT_JSON = \"samples_air2central.json\"\n"
+    "OUTPUT_CSV = \"weber2central_complete_trip_samples.csv\"\n",
+    "OUTPUT_JSON = \"samples_weber2central.json\"\n"
    ]
   },
   {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "49cda62c",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "c99013d5",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "93c12ee5",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "94377eb6",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "59523236",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "e2e6593d",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "c834f3ab",
    "metadata": {},
    "outputs": [],
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "24ca2fa1",
    "metadata": {},
    "outputs": [],
