--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "49cda62c",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "4ed905c2",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,8 @@
     "\n",
     "# --- apply rule ---\n",
     "od_df[\"keep\"] = ~(\n",
-    "    od_df[\"od_dist_mile\"] < KEEP_FACTOR * od_df[\"max_route_dist\"]\n",
+    "    od_df[\"max_route_dist\"] > KEEP_FACTOR * od_df[\"od_dist_mile\"]\n",
+    "\n",
     ")\n",
     "\n",
     "valid_linked_ids = od_df.loc[od_df[\"keep\"], \"linked_trip_id\"]\n",
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "c99013d5",
    "metadata": {},
    "outputs": [],
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "id": "93c12ee5",
    "metadata": {},
    "outputs": [],
@@ -332,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "94377eb6",
    "metadata": {},
    "outputs": [],
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "59523236",
    "metadata": {},
    "outputs": [],
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "id": "e2e6593d",
    "metadata": {},
    "outputs": [],
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "id": "c834f3ab",
    "metadata": {},
    "outputs": [],
@@ -511,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "id": "24ca2fa1",
    "metadata": {},
    "outputs": [],
