--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -467,22 +467,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "id": "c834f3ab",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "from datetime import datetime\n",
+    "from collections import defaultdict\n",
+    "from shapely.geometry import mapping\n",
     "\n",
-    "MAX_SAMPLES = 5  # 🔑 建议 3 或 5，不要超过 5\n",
     "\n",
     "samples = []\n",
+    "\n",
     "\n",
     "for r in df.itertuples():\n",
     "    route = build_route(r.geometry)\n",
     "    if route is None:\n",
-    "        continue  # 🚨 不合法的直接丢弃\n",
+    "        continue\n",
     "\n",
     "    o_lon, o_lat = safe_decode_geohash(r.geohash7_orig)\n",
     "    d_lon, d_lat = safe_decode_geohash(r.geohash7_dest)\n",
@@ -528,10 +530,9 @@
     "    samples.append(sample)\n",
     "\n",
     "# =========================\n",
-    "# 🔑 核心筛选逻辑（新增）\n",
+    "# 2️⃣ SAMPLE FILTER（你原来的逻辑）\n",
     "# =========================\n",
     "\n",
-    "# 1️⃣ 有 weight 的排前面（None / NaN 自动靠后）\n",
     "samples_sorted = sorted(\n",
     "    samples,\n",
     "    key=lambda s: (\n",
@@ -540,39 +541,49 @@
     "    )\n",
     ")\n",
     "\n",
-    "# 2️⃣ 只保留前 MAX_SAMPLES 条\n",
     "samples_final = samples_sorted[:MAX_SAMPLES]\n",
     "\n",
     "# =========================\n",
-    "# 输出\n",
-    "# =========================\n",
-    "out = {\n",
-    "    \"schema\": \"nova.complete_trip.sample.v1\",\n",
-    "    \"generated_at\": datetime.utcnow().isoformat() + \"Z\",\n",
-    "    \"count\": len(samples_final),\n",
-    "    \"samples\": samples_final\n",
-    "}\n",
-    "\n",
-    "with open(OUTPUT_JSON, \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(out, f, indent=2, allow_nan=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "24ca2fa1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "from datetime import datetime\n",
-    "from shapely.geometry import mapping\n",
-    "\n",
-    "# =========================\n",
-    "# OD TRACT → GEOJSON\n",
+    "# 🆕 3️⃣ GROUP BY linked_trip → BUILD TRANSFER STRUCTURE（核心修改）\n",
     "# =========================\n",
     "\n",
-    "# 防御式：保证 GEOID 是字符串（非常重要）\n",
+    "linked_groups = defaultdict(list)\n",
+    "for s in samples_final:\n",
+    "    linked_groups[s[\"meta\"][\"linked_trip_id\"]].append(s)\n",
+    "\n",
+    "linked_trips = []\n",
+    "\n",
+    "for linked_id, trips in linked_groups.items():\n",
+    "\n",
+    "    # ⚠️ 必须排序，保证顺序正确\n",
+    "    trips_sorted = sorted(trips, key=lambda x: x[\"id\"])\n",
+    "\n",
+    "    # 🟢 一次完整出行的 OD\n",
+    "    origin = trips_sorted[0][\"origin\"]\n",
+    "    destination = trips_sorted[-1][\"destination\"]\n",
+    "\n",
+    "    # 🟡 中间 transfer 点（每一段 leg 的 destination，除了最后一段）\n",
+    "    transfers = []\n",
+    "    if len(trips_sorted) > 1:\n",
+    "        for t in trips_sorted[:-1]:\n",
+    "            transfers.append({\n",
+    "                \"lon\": t[\"destination\"][\"lon\"],\n",
+    "                \"lat\": t[\"destination\"][\"lat\"],\n",
+    "                \"geohash\": t[\"destination\"][\"geohash\"]\n",
+    "            })\n",
+    "\n",
+    "    linked_trips.append({\n",
+    "        \"linked_trip_id\": linked_id,\n",
+    "        \"origin\": origin,\n",
+    "        \"destination\": destination,\n",
+    "        \"transfers\": transfers,   # 🔑 transfer 在这里\n",
+    "        \"legs\": trips_sorted      # 🔑 原 trip 作为 leg\n",
+    "    })\n",
+    "\n",
+    "# =========================\n",
+    "# 4️⃣ OD TRACT → GEOJSON（你之前的逻辑，基本不变）\n",
+    "# =========================\n",
+    "\n",
     "tracts[\"GEOID\"] = tracts[\"GEOID\"].astype(str)\n",
     "\n",
     "origin_tract = tracts.loc[tracts[\"GEOID\"] == ORIG_TRACT]\n",
@@ -582,10 +593,6 @@
     "    raise ValueError(\"OD tract not uniquely identified\")\n",
     "\n",
     "def geom_to_geojson(gdf):\n",
-    "    \"\"\"\n",
-    "    Convert single-row GeoDataFrame geometry\n",
-    "    to GeoJSON geometry dict (Polygon or MultiPolygon)\n",
-    "    \"\"\"\n",
     "    return mapping(gdf.geometry.iloc[0])\n",
     "\n",
     "od_info = {\n",
@@ -600,19 +607,19 @@
     "}\n",
     "\n",
     "# =========================\n",
-    "# OUTPUT JSON\n",
+    "# 🆕 5️⃣ FINAL OUTPUT（注意 schema & key 改了）\n",
     "# =========================\n",
     "\n",
     "out = {\n",
-    "    \"schema\": \"nova.complete_trip.sample.v1\",\n",
+    "    \"schema\": \"nova.complete_trip.sample.v2\",  # 🔴 version 升级\n",
     "    \"generated_at\": datetime.utcnow().isoformat() + \"Z\",\n",
-    "    \"od\": od_info,                 # 🔑 OD polygon 放在顶层（正确）\n",
-    "    \"count\": len(samples_final),\n",
-    "    \"samples\": samples_final\n",
+    "    \"od\": od_info,\n",
+    "    \"count\": len(linked_trips),\n",
+    "    \"linked_trips\": linked_trips                # 🔑 不再是 samples\n",
     "}\n",
     "\n",
     "with open(OUTPUT_JSON, \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(out, f, indent=2, allow_nan=False)\n"
+    "    json.dump(out, f, indent=2, allow_nan=False)"
    ]
   }
  ],
