--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "c834f3ab",
    "metadata": {},
    "outputs": [],
@@ -495,6 +495,7 @@
     "        \"id\": str(r.trip_id),\n",
     "        \"mode\": str(r.travel_mode).lower().strip(),\n",
     "        \"route\": route,\n",
+    "        \"start_time\": r.local_datetime_start,\n",
     "        \"duration_min\": clean_num(r.duration_min),\n",
     "        \"network_distance_km\": clean_num(r.network_distance),\n",
     "        \"route_distance_km\": clean_num(r.route_distance),\n",
@@ -541,14 +542,20 @@
     "for linked_id, trips in linked_groups.items():\n",
     "\n",
     "    # 按时间 / id 排序\n",
-    "    trips_sorted = sorted(trips, key=lambda x: x[\"id\"])\n",
+    "    trips_sorted = sorted(trips, key=lambda x: x[\"start_time\"])\n",
     "\n",
     "    # 至少 2 个 leg 才有 transfer\n",
     "    if len(trips_sorted) < 2:\n",
     "        continue\n",
     "\n",
-    "    origin = trips_sorted[0][\"origin\"]\n",
-    "    destination = trips_sorted[-1][\"destination\"]\n",
+    "    origin = {\n",
+    "                **trips_sorted[0][\"origin\"],\n",
+    "                \"start_time\": trips_sorted[0][\"start_time\"]\n",
+    "            }\n",
+    "    destination = {\n",
+    "                    **trips_sorted[-1][\"destination\"],\n",
+    "                    \"end_time\": trips_sorted[-1][\"start_time\"]\n",
+    "                }\n",
     "\n",
     "    transfers = []\n",
     "    for t in trips_sorted[:-1]:\n",
