--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c834f3ab",
    "metadata": {},
    "outputs": [],
@@ -482,7 +482,7 @@
     "from datetime import datetime\n",
     "from collections import defaultdict\n",
     "from shapely.geometry import mapping\n",
-    "\n",
+    "MAX_SAMPLES = 5\n",
     "# =========================\n",
     "# 1️⃣ BUILD ALL LEG SAMPLES（不变）\n",
     "# =========================\n",
