--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -48,14 +48,14 @@
     "TRACT_SHP = f\"{BASE_DIR}/Manuscript/Figure/Visualization-RL/2-OD patterns by census track/six_counties_track.shp\"\n",
     "\n",
     "# airport -> central city (example)\n",
-    "ORIG_TRACT = \"49035114000\"#49057201900 (weber) #49035980000 (airport)\n",
-    "DEST_TRACT = \"49035980000\" #49035110106 (ski)\n",
+    "ORIG_TRACT = \"49035980000\"#49057201900 (weber) #49035980000 (airport)\n",
+    "DEST_TRACT = \"49035110106\" #49035110106 (ski)\n",
     "# 49035114000 (center)\n",
     "MONTHS = ['Jan',\n",
     "          'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
     "          'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
-    "OUTPUT_CSV = \"center2air_complete_trip_samples.csv\"\n",
-    "OUTPUT_JSON = \"samples_center2air.json\"\n",
+    "OUTPUT_CSV = \"air2ski_complete_trip_samples.csv\"\n",
+    "OUTPUT_JSON = \"samples_air2ski.json\"\n",
     "\n",
     "KEEP_FACTOR = 2.5   # OD < 2.5 * max(route_dist) -> DROP\n",
     "\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "49cda62c",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
       "\n",
       "=== Processing month Dec ===\n",
       "Before OD filter, linked trips: 218277\n",
-      "Fixed OD distance (mile): 5.46\n"
+      "Fixed OD distance (mile): 20.72\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "4ed905c2",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After OD filter, linked trips: 171921\n"
+      "After OD filter, linked trips: 212249\n"
      ]
     }
    ],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "c99013d5",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "93c12ee5",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "94377eb6",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "59523236",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "e2e6593d",
    "metadata": {},
    "outputs": [],
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "c834f3ab",
    "metadata": {},
    "outputs": [],
