--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -49,13 +49,13 @@
     "\n",
     "# airport -> central city (example)\n",
     "ORIG_TRACT = \"49035980000\"#49057201900 (weber) #49035980000 (airport)\n",
-    "DEST_TRACT = \"49035110106\" #49035110106 (ski)\n",
+    "DEST_TRACT = \"49035114000\" #49035110106 (ski)\n",
     "# 49035114000 (center)\n",
     "MONTHS = ['Jan',\n",
     "          'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
     "          'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
-    "OUTPUT_CSV = \"air2ski_complete_trip_samples.csv\"\n",
-    "OUTPUT_JSON = \"samples_air2ski.json\"\n",
+    "OUTPUT_CSV = f\"{ORIG_TRACT}_to_{DEST_TRACT}.csv\"\n",
+    "OUTPUT_JSON = f\"{ORIG_TRACT}_to_{DEST_TRACT}.json\"\n",
     "\n",
     "KEEP_FACTOR = 2.5   # OD < 2.5 * max(route_dist) -> DROP\n",
     "\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "49cda62c",
    "metadata": {},
    "outputs": [
@@ -88,27 +88,7 @@
       "\n",
       "=== Processing month Feb ===\n",
       "\n",
-      "=== Processing month Mar ===\n",
-      "\n",
-      "=== Processing month Apr ===\n",
-      "\n",
-      "=== Processing month May ===\n",
-      "\n",
-      "=== Processing month Jun ===\n",
-      "\n",
-      "=== Processing month Jul ===\n",
-      "\n",
-      "=== Processing month Aug ===\n",
-      "\n",
-      "=== Processing month Sep ===\n",
-      "\n",
-      "=== Processing month Oct ===\n",
-      "\n",
-      "=== Processing month Nov ===\n",
-      "\n",
-      "=== Processing month Dec ===\n",
-      "Before OD filter, linked trips: 218277\n",
-      "Fixed OD distance (mile): 20.72\n"
+      "=== Processing month Mar ===\n"
      ]
     }
    ],
@@ -226,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "4ed905c2",
    "metadata": {},
    "outputs": [
@@ -275,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "c99013d5",
    "metadata": {},
    "outputs": [],
@@ -318,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "93c12ee5",
    "metadata": {},
    "outputs": [],
@@ -346,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "94377eb6",
    "metadata": {},
    "outputs": [],
@@ -413,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "59523236",
    "metadata": {},
    "outputs": [],
@@ -423,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "e2e6593d",
    "metadata": {},
    "outputs": [],
@@ -473,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "c834f3ab",
    "metadata": {},
    "outputs": [],
