--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "49cda62c",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,27 @@
       "\n",
       "=== Processing month Feb ===\n",
       "\n",
-      "=== Processing month Mar ===\n"
+      "=== Processing month Mar ===\n",
+      "\n",
+      "=== Processing month Apr ===\n",
+      "\n",
+      "=== Processing month May ===\n",
+      "\n",
+      "=== Processing month Jun ===\n",
+      "\n",
+      "=== Processing month Jul ===\n",
+      "\n",
+      "=== Processing month Aug ===\n",
+      "\n",
+      "=== Processing month Sep ===\n",
+      "\n",
+      "=== Processing month Oct ===\n",
+      "\n",
+      "=== Processing month Nov ===\n",
+      "\n",
+      "=== Processing month Dec ===\n",
+      "Before OD filter, linked trips: 218277\n",
+      "Fixed OD distance (mile): 5.46\n"
      ]
     }
    ],
@@ -206,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "4ed905c2",
    "metadata": {},
    "outputs": [
@@ -214,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After OD filter, linked trips: 212249\n"
+      "After OD filter, linked trips: 171921\n"
      ]
     }
    ],
@@ -255,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "c99013d5",
    "metadata": {},
    "outputs": [],
@@ -298,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "93c12ee5",
    "metadata": {},
    "outputs": [],
@@ -326,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "94377eb6",
    "metadata": {},
    "outputs": [],
@@ -393,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "59523236",
    "metadata": {},
    "outputs": [],
@@ -403,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "e2e6593d",
    "metadata": {},
    "outputs": [],
@@ -453,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "c834f3ab",
    "metadata": {},
    "outputs": [],
