--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
     "TRACT_SHP = f\"{BASE_DIR}/Manuscript/Figure/Visualization-RL/2-OD patterns by census track/six_counties_track.shp\"\n",
     "\n",
     "# airport -> central city (example)\n",
-    "ORIG_TRACT = \"49035980000\"#49057201900 (weber) #49035980000 (airport)\n",
+    "ORIG_TRACT = \"49035110106\"#49057201900 (weber) #49035980000 (airport)\n",
     "DEST_TRACT = \"49035114000\" #49035110106 (ski)\n",
     "# 49035114000 (center)\n",
     "MONTHS = ['Jan',\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "49cda62c",
    "metadata": {},
    "outputs": [
@@ -84,31 +84,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Processing month Jan ===\n",
-      "\n",
-      "=== Processing month Feb ===\n",
-      "\n",
-      "=== Processing month Mar ===\n",
-      "\n",
-      "=== Processing month Apr ===\n",
-      "\n",
-      "=== Processing month May ===\n",
-      "\n",
-      "=== Processing month Jun ===\n",
-      "\n",
-      "=== Processing month Jul ===\n",
-      "\n",
-      "=== Processing month Aug ===\n",
-      "\n",
-      "=== Processing month Sep ===\n",
-      "\n",
-      "=== Processing month Oct ===\n",
-      "\n",
-      "=== Processing month Nov ===\n",
-      "\n",
-      "=== Processing month Dec ===\n",
-      "Before OD filter, linked trips: 218277\n",
-      "Fixed OD distance (mile): 5.46\n"
+      "=== Processing month Jan ===\n"
      ]
     }
    ],
@@ -226,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "4ed905c2",
    "metadata": {},
    "outputs": [
@@ -234,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After OD filter, linked trips: 171921\n"
+      "After OD filter, linked trips: 212249\n"
      ]
     }
    ],
@@ -275,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "c99013d5",
    "metadata": {},
    "outputs": [],
@@ -318,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "93c12ee5",
    "metadata": {},
    "outputs": [],
@@ -346,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "94377eb6",
    "metadata": {},
    "outputs": [],
@@ -413,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "59523236",
    "metadata": {},
    "outputs": [],
@@ -423,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "e2e6593d",
    "metadata": {},
    "outputs": [],
@@ -473,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "c834f3ab",
    "metadata": {},
    "outputs": [],
