--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -84,7 +84,27 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Processing month Jan ===\n"
+      "=== Processing month Jan ===\n",
+      "\n",
+      "=== Processing month Feb ===\n",
+      "\n",
+      "=== Processing month Mar ===\n",
+      "\n",
+      "=== Processing month Apr ===\n",
+      "\n",
+      "=== Processing month May ===\n",
+      "\n",
+      "=== Processing month Jun ===\n",
+      "\n",
+      "=== Processing month Jul ===\n",
+      "\n",
+      "=== Processing month Aug ===\n",
+      "\n",
+      "=== Processing month Sep ===\n",
+      "\n",
+      "=== Processing month Oct ===\n",
+      "\n",
+      "=== Processing month Nov ===\n"
      ]
     }
    ],
