--- a/data/samples/sample_selection.ipynb
+++ b/data/samples/sample_selection.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "49cda62c",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,17 @@
       "\n",
       "=== Processing month Jul ===\n",
       "\n",
-      "=== Processing month Aug ===\n"
+      "=== Processing month Aug ===\n",
+      "\n",
+      "=== Processing month Sep ===\n",
+      "\n",
+      "=== Processing month Oct ===\n",
+      "\n",
+      "=== Processing month Nov ===\n",
+      "\n",
+      "=== Processing month Dec ===\n",
+      "Before OD filter, linked trips: 218277\n",
+      "Fixed OD distance (mile): 8.72\n"
      ]
     }
    ],
@@ -217,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "4ed905c2",
    "metadata": {},
    "outputs": [
@@ -225,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After OD filter, linked trips: 204627\n"
+      "After OD filter, linked trips: 194096\n"
      ]
     }
    ],
@@ -266,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "c99013d5",
    "metadata": {},
    "outputs": [],
@@ -309,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "93c12ee5",
    "metadata": {},
    "outputs": [],
@@ -337,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "94377eb6",
    "metadata": {},
    "outputs": [],
@@ -404,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "59523236",
    "metadata": {},
    "outputs": [],
@@ -414,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "e2e6593d",
    "metadata": {},
    "outputs": [],
@@ -464,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "c834f3ab",
    "metadata": {},
    "outputs": [],
